
PIG-2966: Test failures on CentOS 6 because MALLOC_ARENA_MAX is not set (cheolsoo via sms)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3270: Union onschema failing at runtime when merging incompatible types (knoguchi via daijy)

PIG-3271: POSplit ignoring error from input processing giving empty results (knoguchi via daijy)

PIG-2265: Test case TestSecondarySort failure (daijy)

PIG-3060: FLATTEN in nested foreach fails when the input contains an empty bag (daijy)

PIG-2247: Pig parser does not detect multiple arguments with the same name passed to macro (dreambird via daijy)

PIG-3264: mvn signanddeploy target broken for pigunit, pigsmoke and piggybank (billgraham)

PIG-3262: Pig contrib 0.11 doesn't compile on certain rpm systems (mgrover via cheolsoo)

PIG-3249: Pig startup script prints out a wrong version of hadoop when using fat jar (prkommireddi via daijy)

PIG-3110: pig corrupts chararrays with trailing whitespace when converting them to long (prkommireddi via daijy)

PIG-3253: Misleading comment w.r.t getSplitIndex() method in PigSplit.java (cheolsoo)

PIG-3208: [zebra] TFile should not set io.compression.codec.lzo.buffersize (ekoontz via daijy)

PIG-3172: Partition filter push down does not happen when there is a non partition key map column filter (rohini)

PIG-3205: Passing arguments to python script does not work with -f option (rohini)

PIG-2507: Semicolon in paramenters for UDF results in parsing error (tnachen via daijy)

PIG-3239: Unable to return multiple values from a macro using SPLIT (dreambird via cheolsoo)

PIG-3077: TestMultiQueryLocal should not write in /tmp (dreambird via cheolsoo)

PIG-3081: Pig progress stays at 0% for the first job in hadoop 23 (rohini)
