@@ -123,7 +123,8 @@ import org.junit.runner.RunWith;
     "testSortedDistinctInForeach",
     "testUDFInMergedCoGroup",
     "testUDFInMergedJoin",
-    "testSchemaInStoreForDistinctLimit" })
+    "testSchemaInStoreForDistinctLimit",
+    "testStorerLimit"})
 public class TestMRCompiler {
     static MiniCluster cluster = MiniCluster.buildCluster();
 
@@ -1207,5 +1208,26 @@ public class TestMRCompiler {
                 store.getSchema(),
                 Utils.getSchemaFromString("a : int,b :float ,c : int")
         );
+    }
+    
+    //PIG-2146
+    @Test
+    public void testStorerLimit() throws Exception {
+        // test if the POStore in the 1st mr plan 
+        // use the right StoreFunc
+        String query = "a = load 'input1';" +
+            "b = limit a 10;" +
+            "store b into 'output' using " + PigStorageNoDefCtor.class.getName() + "(',');";
+
+        PhysicalPlan pp = Util.buildPp(pigServer, query);
+        MROperPlan mrPlan = Util.buildMRPlan(pp, pc);
+        
+        LimitAdjuster la = new LimitAdjuster(mrPlan, pc);
+        la.visit();
+        la.adjust();
+        
+        MapReduceOper firstMrOper = mrPlan.getRoots().get(0);
+        POStore store = (POStore)firstMrOper.reducePlan.getLeaves().get(0);
+        assertEquals(store.getStoreFunc().getClass().getName(), "org.apache.pig.impl.io.InterStorage");
     }
 }
