@@ -154,6 +154,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3267: HCatStorer fail in limit query (daijy)
+
 PIG-3270: Union onschema failing at runtime when merging incompatible types (knoguchi via daijy)
 
 PIG-3271: POSplit ignoring error from input processing giving empty results (knoguchi via daijy)
